nivasa-macros/tests/trybuild/controller_parameter_extractors_headers_no_route.stderr
error: controller metadata requires an HTTP method attribute
 --> tests/trybuild/controller_parameter_extractors_headers_no_route.rs:8:8
  |
8 |     fn create(#[nivasa_macros::headers("headers")] headers: String) {
  |        ^^^^^^
